--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,11 @@ contractions==0.1.72
 deep_translator==1.9.0
 detectlanguage==1.5.0
 Django==4.1.2
-django-cors-headers==3.8.0
-djangorestframework==3.12.4
 ftfy==6.1.1
 keras==2.10.0
 nltk==3.7
 numpy==1.23.4
+opencv_python==4.6.0.66
 pandas==1.5.1
 pycld2==0.41
 requests==2.28.1
@@ -16,17 +15,17 @@ scipy==1.9.3
 spacy==3.4.2
 spotipy==2.20.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz
-gunicorn==20.1.0
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-opencv-python==4.5.2.54
-opt-einsum==3.3.0
-Pillow==8.3.2
-regex==2021.7.6
-requests-oauthlib==1.3.0
-sklearn==0.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-typing-extensions==3.7.4.3
-urllib3==1.26.6
-xgboost==0.90
+gunicorn
+keras-nightly
+Keras-Preprocessing
+opt-einsum
+Pillow
+regex
+requests-oauthlib
+sklearn
+tensorflow
+tensorflow-estimator
+typing-extensions
+urllib3
+xgboost
+
