--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ nltk==3.2.5
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz
 keras
 tensorflow
+tensorflow-cpu
 opencv-python-headless
 xgboost==0.90
 scikit-learn
